@@ -1,14 +1,0 @@
-STR_DOM_MISSIONSTRING_363_ON
-STR_DOM_MISSIONSTRING_399_VERYLOW
-STR_DOM_MISSIONSTRING_400_VERYHIGH
-STR_DOM_MISSIONSTRING_722_GENERIC_NAME
-STR_DOM_MISSIONSTRING_812_GENERIC_NAME
-STR_DOM_MISSIONSTRING_1333
-STR_DOM_MISSIONSTRING_1741_CORPSES
-STR_DOM_MISSIONSTRING_2007_FPS
-STR_DOM_MISSIONSTRING_2028_INFANTRY
-STR_DOM_MISSIONSTRING_2028_RABBIT
-STR_DOM_MISSIONSTRING_2034
-STR_DOM_MISSIONSTRING_2035
-STR_DOM_MISSIONSTRING_2036
-STR_DOM_MISSIONSTRING_2037
