@@ -21,3 +21,4 @@
 - Fixed: Map on draw was not drawing displayname for vehicles correctly
 - Fixed: Copy and paste error resulting in non existent variables when loading a DB savegame
 - Fixed: Copy and paste error in getbonus script
+- Updated: Korean translation by kkim
